# aruco_asset_tracking

./: ArucoMarker.cpp  ArucoMarker.h  ArucoTracker.cpp  ArucoTracker.h  CMakeLists.txt  README.md  iothub.crt  main.cpp
